<resources>
    <!-- default strings -->

    <string name="app_name">G4m3s4Fr33</string>
    <string name="bob">Bob</string>
    <string name="giga_chad">\'The Giga Chad\'</string>
    <string name="greetings_user_default">Hello User!</string>
    <string name="toast_favorite_text">%1$s\nadded to favorites</string>
    <string name="toast_achievement_text">Achievement reached:\nGIGA CHAD</string>
    <string name="sum_ting_wong">Oops! Something went wrong…</string>
    <string name="ho_lee_fuk">Oops! Error requesting the Api…</string>

    <!-- strings for textView and editText -->

    <string name="name_nickname">Name / Nickname</string>
    <string name="playtime_in_hours">Your playtime</string>
    <string name="enter_playtime_in_hours">Please enter your playtime in hours here!</string>
    <string name="filter_by_platform">Filter by platform</string>
    <string name="sort_by">Sort by</string>
    <string name="greetings_user">Hello %1$s!</string>
    <string name="please_enter_your_name_nickname_here">Please enter your Name / Nickname here!</string>
    <string name="search_for_category">search for category</string>
    <string name="no_clue_what_to_do_try_this_game">No clue what to do? Try this game!</string>
    <string name="achievement_profile_text">Achieved:\n<font color='red'>GIGA CHAD</font></string>

    <!-- strings for button -->

    <string name="home_btn_games_text">All Games</string>
    <string name="home_btn_favorites_text">My Favorites</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_homepage">Go to homepage</string>
    <string name="show_more">show more</string>
    <string name="show_less">show less</string>
    <string name="add_to_favorites">Add</string>
    <string name="remove_from_favorites">Remove</string>
    <string name="added_to_favorites">Added</string>
    <string name="go_to_game_details">Go to Details</string>
    <string name="back_to_favorites">Back to favorites</string>
    <string name="filter">Filter</string>
    <string name="go">GO!</string>

    <!-- strings for radioButton -->

    <string name="all">All</string>
    <string name="browser">Browser</string>
    <string name="pc">PC</string>
    <string name="relevance">Relevance</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="release_date">Release-date</string>
    <string name="popularity">Popularity</string>

    <!-- strings with links -->

    <string name="api_by_www_freetogame_com">Api by: www.freetogame.com</string>
    <string name="suno_ai_link">Klick here for <font color='red'>free</font> playlist!</string>
    <string name="github_link">Go to <font color='red'>GitHub</font> here!</string>

    <!-- special strings for game detail -->

    <string name="game_detail_description">Description:\n\n%1$s</string>
    <string name="game_detail_status">Status:\n%1$s</string>
    <string name="game_detail_genre">Genre:\n%1$s</string>
    <string name="game_detail_platform">Platform:\n%1$s</string>
    <string name="game_detail_publisher">Publisher: %1$s</string>
    <string name="game_detail_dev">Developer: %1$s</string>
    <string name="game_detail_release">Release Date: %1$s</string>
    <string name="game_detail_sys_req">Minimum System Requirements:\n\nOS: %1$s\nProcessor: %2$s\nMemory: %3$s\nGraphics: %4$s\nStorage: %5$s</string>

   <!-- special strings for favorites -->

    <string name="date_game_added_to_favorites">Game added at: %1$s</string>
    <string name="played_hours">Played %1$s hours</string>
    <string name="unranked">Not Ranked</string>
    <string name="rank_noob">Rank: <font color='red'>Noob</font></string>
    <string name="rank_rookie">Rank: <font color='yellow'> Rookie</font></string>
    <string name="rank_causal_gamer">Rank: <font color='green'>Causal Gamer</font></string>
    <string name="rank_pro_Gamer">Rank: <font color='#0087FF'>Pro Gamer</font></string>
    <string name="rank_mvp">Rank: <font color='#00FFF7'>MVP</font></string>
    <string name="rank_masterchief">Rank: <font color='#735FCC'>Master Chief</font></string>
    <string name="rank_no_lifer">Rank: <font color='#B660CA'>No Lifer</font></string>

    <!-- string-array for autocompletion and easterEgg -->

    <string-array name="game_categories">
        <item>mmorpg</item>
        <item>shooter</item>
        <item>strategy</item>
        <item>moba</item>
        <item>racing</item>
        <item>sports</item>
        <item>social</item>
        <item>sandbox</item>
        <item>open-world</item>
        <item>survival</item>
        <item>pvp</item>
        <item>pve</item>
        <item>pixel</item>
        <item>voxel</item>
        <item>zombie</item>
        <item>turn-based</item>
        <item>first-person</item>
        <item>third-person</item>
        <item>top-down</item>
        <item>tank</item>
        <item>space</item>
        <item>sailing</item>
        <item>side-scroller</item>
        <item>superhero</item>
        <item>permadeath</item>
        <item>card</item>
        <item>battle-royale</item>
        <item>mmo</item>
        <item>mmofps</item>
        <item>mmotps</item>
        <item>3d</item>
        <item>2d</item>
        <item>anime</item>
        <item>fantasy</item>
        <item>sci-fi</item>
        <item>fighting</item>
        <item>action-rpg</item>
        <item>action</item>
        <item>military</item>
        <item>martial-arts</item>
        <item>flight</item>
        <item>low-spec</item>
        <item>tower-defense</item>
        <item>horror</item>
        <item>mmorts</item>
    </string-array>

    <!-- string-array for easterEgg -->

    <string-array name="random_strings_for_random_list">
        <item>party hard</item>
        <item>design nightmare</item>
        <item>lul</item>
        <item>pwnd</item>
        <item>kekw</item>
        <item>giga chad</item>
    </string-array>
</resources>


