<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/bob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:strokeColor="@color/mySilver"
        app:strokeWidth="2dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etProfileName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_shape"
        android:padding="8dp"
        android:layout_marginTop="32dp"
        android:hint="@string/name_nickname"
        android:textColorHint="@color/mySilver"
        android:inputType="textPersonName"
        android:textColor="@color/mySilver"
        android:textAlignment="center"
        android:focusableInTouchMode="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfilePic" />

    <Button
        android:id="@+id/btnEditUserPic"
        style="@style/editButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="40dp"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvProfileUserAchieved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/vwBlackMetallic"
        app:strokeColor="@color/imBlue"
        app:strokeWidth="2dp"
        app:cardCornerRadius="12dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etProfileName">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/gifIVProfileLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:adjustViewBounds="true"
                android:maxWidth="62dp"
                android:maxHeight="77dp"
                android:scaleType="fitCenter"
                android:src="@drawable/dancing_fox_girl_two"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvProfileUserAchievement"/>

            <TextView
                android:id="@+id/tvProfileUserAchievement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/achievement_profile_text"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textColor="@color/imBlue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/gifIVProfileRight"
                app:layout_constraintStart_toEndOf="@+id/gifIVProfileLeft"
                app:layout_constraintTop_toTopOf="parent" />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/gifIVProfileRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:adjustViewBounds="true"
                android:maxWidth="62dp"
                android:maxHeight="77dp"
                android:scaleType="fitCenter"
                android:src="@drawable/dancing_fox_girl_two"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvProfileUserAchievement"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>